04 extra 04: changed buildLoginForm to use spread operator

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "react-scripts build",
     "start": "react-scripts start",
-    "test": "react-scripts test",
+    "test": "react-scripts test --maxWorkers=1",
     "test:coverage": "npm run test -- --watchAll=false",
     "test:exercises": "npm run test -- testing.*exercises\\/ --onlyChanged",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
